--- a/4. App Web HTML5 y PHP/6_Pagina_Categorias/0_Index_Categorias.html
+++ b/4. App Web HTML5 y PHP/6_Pagina_Categorias/0_Index_Categorias.html
@@ -3,19 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barra de Navegación</title>
+    <title>Sección de Reembolsos</title>
 </head>
 <body>
+    <div>
+        <h2>Sección de Reembolsos</h2>
+        <form id="formularioReembolso">
+            <label for="codigo">Código:</label>
+            <input type="text" id="codigo" required>
+            <label for="nombre">Nombre del Cliente:</label>
+            <input type="text" id="nombre" required>
+            <label for="motivo">Motivo:</label>
+            <input type="text" id="motivo" required>
+            <button type="button" onclick="agregarReembolso()">Añadir Reembolso</button>
+            <button type="button" onclick="verificarReembolso()">Verificar Reembolso</button>
+            <button type="button" onclick="eliminarReembolso()">Eliminar Reembolso</button>
+            <button type="button" onclick="modificarReembolso()">Modificar Reembolso</button>
+        </form>
+        <button type="button" onclick="consultarReembolsos()">Consultar Reembolsos</button>
+        <table id="tablaReembolsos">
+            <thead>
+                <tr>
+                    <th>Código</th>
+                    <th>Nombre del Cliente</th>
+                    <th>Motivo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Aquí se agregarán dinámicamente los reembolsos -->
+            </tbody>
+        </table>
+    </div>
 
-<nav>
-    <a href="#verificar">Verificar Categorías</a>
-    <a href="#anadir">Añadir Categorías</a>
-    <a href="#eliminar">Eliminar Categorías</a>
-    <a href="#modificar">Modificar Categorías</a>
-    <a href="#consultar">Consultar Categorías</a>
-</nav>
+    <script>
+        function agregarReembolso() {
+            var codigo = document.getElementById("codigo").value;
+            var nombre = document.getElementById("nombre").value;
+            var motivo = document.getElementById("motivo").value;
 
-<!-- Aquí irían el contenido de las secciones #verificar, #anadir, etc. -->
+            var tabla = document.getElementById("tablaReembolsos").getElementsByTagName('tbody')[0];
+            var fila = tabla.insertRow(tabla.rows.length);
+            var celdaCodigo = fila.insertCell(0);
+            var celdaNombre = fila.insertCell(1);
+            var celdaMotivo = fila.insertCell(2);
 
+            celdaCodigo.innerHTML = codigo;
+            celdaNombre.innerHTML = nombre;
+            celdaMotivo.innerHTML = motivo;
+
+            // Limpiar los campos del formulario
+            document.getElementById("codigo").value = "";
+            document.getElementById("nombre").value = "";
+            document.getElementById("motivo").value = "";
+        }
+
+        function verificarReembolso() {
+            var codigo = prompt("Ingrese el código del reembolso a verificar:");
+            var tabla = document.getElementById("tablaReembolsos").getElementsByTagName('tbody')[0];
+
+            for (var i = 0; i < tabla.rows.length; i++) {
+                var celdaCodigo = tabla.rows[i].cells[0];
+
+                if (celdaCodigo.innerHTML === codigo) {
+                    alert("Reembolso encontrado:\n" +
+                        "Código: " + celdaCodigo.innerHTML + "\n" +
+                        "Nombre del Cliente: " + tabla.rows[i].cells[1].innerHTML + "\n" +
+                        "Motivo: " + tabla.rows[i].cells[2].innerHTML);
+                    return;
+                }
+            }
+
+            alert("Reembolso no encontrado.");
+        }
+
+        function eliminarReembolso() {
+            var codigo = prompt("Ingrese el código del reembolso a eliminar:");
+            var tabla = document.getElementById("tablaReembolsos").getElementsByTagName('tbody')[0];
+
+            for (var i = 0; i < tabla.rows.length; i++) {
+                var celdaCodigo = tabla.rows[i].cells[0];
+
+                if (celdaCodigo.innerHTML === codigo) {
+                    tabla.deleteRow(i);
+                    alert("Reembolso eliminado.");
+                    return;
+                }
+            }
+
+            alert("Reembolso no encontrado.");
+        }
+
+        function modificarReembolso() {
+            var codigo = prompt("Ingrese el código del reembolso a modificar:");
+            var tabla = document.getElementById("tablaReembolsos").getElementsByTagName('tbody')[0];
+
+            for (var i = 0; i < tabla.rows.length; i++) {
+                var celdaCodigo = tabla.rows[i].cells[0];
+
+                if (celdaCodigo.innerHTML === codigo) {
+                    var nuevoNombre = prompt("Ingrese el nuevo nombre del cliente:");
+                    var nuevoMotivo = prompt("Ingrese el nuevo motivo:");
+
+                    tabla.rows[i].cells[1].innerHTML = nuevoNombre;
+                    tabla.rows[i].cells[2].innerHTML = nuevoMotivo;
+
+                    alert("Reembolso modificado.");
+                    return;
+                }
+            }
+
+            alert("Reembolso no encontrado.");
+        }
+
+        function consultarReembolsos() {
+            var tabla = document.getElementById("tablaReembolsos").getElementsByTagName('tbody')[0];
+
+            if (tabla.rows.length > 0) {
+                for (var i = 0; i < tabla.rows.length; i++) {
+                    var codigo = tabla.rows[i].cells[0].innerHTML;
+                    var nombre = tabla.rows[i].cells[1].innerHTML;
+                    var motivo = tabla.rows[i].cells[2].innerHTML;
+
+                    console.log("Reembolso " + (i + 1) + ":\n" +
+                        "Código: " + codigo + "\n" +
+                        "Nombre del Cliente: " + nombre + "\n" +
+                        "Motivo: " + motivo);
+                }
+            } else {
+                alert("No hay reembolsos para mostrar.");
+            }
+        }
+    </script>
 </body>
 </html>
