--- a/4. App Web HTML5 y PHP/1_Pagina_Menu_Principal/0_Index_MenuPrincipal.html
+++ b/4. App Web HTML5 y PHP/1_Pagina_Menu_Principal/0_Index_MenuPrincipal.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Infinity Technology</title>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-
-    <h1> HOLA </h1>
-    
+  <header>
+    <div class="interior">
+      <a href="" class="logo"><img src="./assets/img/infinity.png" alt=""></a>
+      <nav class="navegacion">
+      <ul>
+        <li class="submenu">
+          <a href="#">Catálogos</a>
+          <ul class="hijos">
+            <li><a href="#">Clientes</a></li>
+            <li><a href="#">Proveedores</a></li>
+            <li><a href="#">Productos</a></li>
+          </ul>
+        </li>    
+        <li class="submenu">
+          <a href="">Movimientos</a>
+          <ul class="hijos">
+            <li><a href="">Recibo</a></li>
+            <li><a href="">Cierre de Caja</a></li>
+            <li><a href="">Inventario</a></li>
+            <li><a href="">Reembolsos</a></li>
+            <li><a href="">Devoluciones</a></li>
+          </ul>
+        </li>
+        <li class="submenu">
+          <a href="">Reportes</a>
+          <ul class="hijos">
+            <li><a href="">Clientes</a></li>
+            <li><a href="">Proveedores</a></li>
+            <li><a href="">Productos</a></li>
+            <li><a href="">Auditoria</a></li>
+            <li><a href="">Cierre de Caja</a></li>
+            <li><a href="">Reembolsos</a></li>
+            <li><a href="">Devoluciones</a></li>
+            <li><a href="">Reimprimir Recibo</a></li>
+          </ul>
+        </li>
+        <li class="submenu">
+          <a href="">Mantenimiento</a>
+          <ul class="hijos">
+            <li><a href="">Seguridad</a></li>
+            <li><a href="">Auditoria</a></li>
+            <li><a href="">Administrador</a></li>
+            <li><a href="">Respaldar</a></li>
+            <li><a href="">Restaurar</a></li>
+          </ul>
+        </li>
+        <li class="submenu">
+          <a href="">Ayuda</a>
+          <ul class="hijos">
+            <li><a href="">Acerca de</a></li>
+            <li><a href="">Manual de Usuario</a></li>
+            <li><a href="">Información de Sistema</a></li>
+          </ul>
+        </li>
+        <li class="submenu">
+          <a href="">Configuración</a>
+          <ul class="hijos">
+            <li><a href="">Notificaciones</a></li>
+            <li><a href="">Configuración General</a></li>
+            <li><a href="">Configuración Sistema</a></li>
+          </ul>
+        </li>
+        <li class="submenu">
+          <a href=""><i class="fa-solid fa-circle-user fa-2xl" style="font-size: 3em;" ></i></a>
+          <ul class="hijos user">
+            <li><a href="/Sistema-Administrativo/4. App Web HTML5 y PHP/1_Pagina_Menu_Principal/1_Menu_Usarios_Opciones.html">Opciones</a></li>
+            <li><a href="/Sistema-Administrativo/4. App Web HTML5 y PHP/0_Pagina_Usuarios-Login/7_CerrarSesion.php">Cerrar Sesión</a></li>
+          </ul>
+        </li>
+      </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
