--- a/4. App Web HTML5 y PHP/1_Pagina_Menu_Principal/0_Index_MenuPrincipal.html
+++ b/4. App Web HTML5 y PHP/1_Pagina_Menu_Principal/0_Index_MenuPrincipal.html
@@ -17,9 +17,9 @@
         <li class="submenu">
           <a href="#">Catálogos</a>
           <ul class="hijos">
-            <li><a href="#">Clientes</a></li>
-            <li><a href="#">Proveedores</a></li>
-            <li><a href="#">Productos</a></li>
+            <li><a href="/Sistema-Administrativo/4. App Web HTML5 y PHP/2_Pagina_Clientes/0_Index_Cliente.php">Clientes</a></li>
+            <li><a href="">Proveedores</a></li>
+            <li><a href="">Productos</a></li>
           </ul>
         </li>    
         <li class="submenu">
@@ -28,8 +28,6 @@
             <li><a href="">Recibo</a></li>
             <li><a href="">Cierre de Caja</a></li>
             <li><a href="">Inventario</a></li>
-            <li><a href="">Reembolsos</a></li>
-            <li><a href="">Devoluciones</a></li>
           </ul>
         </li>
         <li class="submenu">
@@ -40,17 +38,13 @@
             <li><a href="">Productos</a></li>
             <li><a href="">Auditoria</a></li>
             <li><a href="">Cierre de Caja</a></li>
-            <li><a href="">Reembolsos</a></li>
-            <li><a href="">Devoluciones</a></li>
             <li><a href="">Reimprimir Recibo</a></li>
           </ul>
         </li>
         <li class="submenu">
           <a href="">Mantenimiento</a>
           <ul class="hijos">
-            <li><a href="">Seguridad</a></li>
             <li><a href="">Auditoria</a></li>
-            <li><a href="">Administrador</a></li>
             <li><a href="">Respaldar</a></li>
             <li><a href="">Restaurar</a></li>
           </ul>
@@ -68,7 +62,6 @@
           <ul class="hijos">
             <li><a href="">Notificaciones</a></li>
             <li><a href="">Configuración General</a></li>
-            <li><a href="">Configuración Sistema</a></li>
           </ul>
         </li>
         <li class="submenu">
